--- a/login-signup/src/components/Modal.module.css
+++ b/login-signup/src/components/Modal.module.css
@@ -1,23 +1,18 @@
-.dialogShadow {
-    width: 100%;
-    height: 100vh;
+.modal {
     position: fixed;
-    top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
     left: 0;
-    background-color: rgba(0, 0, 0, 0.4);
+    right: 0;
+    top: 0;
+    bottom: 0;
     display: flex;
-    align-items: center;
     justify-content: center;
-   
+    align-items: center;
+    
   }
-  .dialog {
+  .modalContent {
     border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: auto;
-    height: auto;
-   
+    border-radius: 5px;
   }
   .form {
     display: flex;
