--- a/login-signup/src/components/HomeContainer.module.css
+++ b/login-signup/src/components/HomeContainer.module.css
@@ -1,26 +1,24 @@
-
 body {
-    margin-inline: auto;
-    background-color: rgb(190, 223, 234);
-    margin: 20px;
-    padding: 0px;
-  }
-  .float{
-    position:fixed;
-    width:70px;
-    height:70px;
-    bottom:40px;
-    right:40px;
-    background-color:cornflowerblue;
-    color:#FFF;
-    border-radius:50px;
-    text-align:center;
+  margin-inline: auto;
+  background-color: rgb(190, 223, 234);
+  margin: 20px;
+  padding: 0px;
+}
+.float {
+  position: fixed;
+  width: 70px;
+  height: 70px;
+  bottom: 40px;
+  right: 40px;
+  background-color: cornflowerblue;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
   border: none;
   cursor: pointer;
   font-weight: 400;
   font-size: 54px;
-
 }
-.float:hover{
+.float:hover {
   background-color: rgb(27, 95, 221);
 }
