--- a/login-signup/src/components/HomeContainer.module.css
+++ b/login-signup/src/components/HomeContainer.module.css
@@ -21,3 +21,89 @@ body {
 .float:hover {
   background-color: rgb(27, 95, 221);
 }
+.navbar {
+  display: flex;
+  justify-content: right;
+  height: 45px;
+  width: auto;
+  background-color: cornflowerblue;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  box-shadow: rgb(61, 61, 59) 0px 12px 32px -13px;
+}
+.logoutbtn {
+  width: 35px;
+  height: 35px;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 50px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.cardsMain {
+  display: flex;
+  gap: 10px;
+  width: auto;
+  height: auto;
+  margin: 30px;
+}
+.card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  box-shadow: rgb(61, 61, 59) 0px 12px 32px -9px;
+  border-radius: 10px;
+  width: 310px;
+  height: 370px;
+  background-color: rgba(247, 191, 7, 0.4);
+}
+.title {
+  font-weight: bolder;
+  width: 259.5px;
+  color: midnightblue;
+  min-height: 20px;
+  padding: 3px;
+  background: transparent;
+  margin: 0;
+}
+.description {
+  border-top: 1px solid #fff;
+  min-height: 275px;
+  height: 280px;
+  width: 280px;
+  padding: 3px;
+  background: transparent;
+  margin: 0;
+}
+.date {
+  display: flex;
+  color: #fff;
+  font-size: 12px;
+}
+.bottom {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 35px;
+  margin-top: 15px;
+  align-items: center;
+  gap: 200px;
+}
+.edit {
+  width: 20px;
+  height: 20px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.xmark {
+  width: 20px;
+  height: 20px;
+}
+.cardTop {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
