--- a/login-signup/src/components/HomeContainer.module.css
+++ b/login-signup/src/components/HomeContainer.module.css
@@ -43,10 +43,12 @@ body {
 }
 .cardsMain {
   display: flex;
-  gap: 10px;
+  justify-content: center;
+  gap: 20px;
   width: auto;
   height: auto;
   margin: 30px;
+  flex-wrap: wrap;
 }
 .card {
   display: flex;
@@ -55,9 +57,9 @@ body {
   flex-direction: column;
   box-shadow: rgb(61, 61, 59) 0px 12px 32px -9px;
   border-radius: 10px;
-  width: 310px;
+  width: 295px;
   height: 370px;
-  background-color: rgba(247, 191, 7, 0.4);
+  /* background-color: rgba(247, 191, 7, 0.4); */
 }
 .title {
   font-weight: bolder;
@@ -69,7 +71,6 @@ body {
   margin: 0;
 }
 .description {
-  border-top: 1px solid #fff;
   min-height: 275px;
   height: 280px;
   width: 280px;
@@ -101,8 +102,18 @@ body {
 .xmark {
   width: 20px;
   height: 20px;
+  cursor: pointer;
 }
 .cardTop {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #fff;
+}
+.addNoteText {
+  color: midnightblue;
+}
+.homeText {
   display: flex;
   align-items: center;
   justify-content: center;
