--- a/login-signup/src/components/HomeContainer.module.css
+++ b/login-signup/src/components/HomeContainer.module.css
@@ -74,6 +74,8 @@ body {
   border-radius: 10px;
   width: 295px;
   height: 370px;
+  min-height: 360px;
+  max-height: 370px;
   /* background-color: rgba(247, 191, 7, 0.4); */
 }
 .title {
@@ -88,11 +90,25 @@ body {
 .description {
   min-height: 275px;
   height: 280px;
+  max-height: 280px;
   width: 280px;
   padding: 3px;
   background: transparent;
   margin: 0;
+  overflow: auto;
 }
+.description::-webkit-scrollbar {
+  width: 10px;
+}
+
+.description::-webkit-scrollbar-track {
+  background-color: darkgrey;
+}
+
+.description::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
 .date {
   display: flex;
   color: #fff;
