--- a/login-signup/src/components/HomeContainer.module.css
+++ b/login-signup/src/components/HomeContainer.module.css
@@ -36,6 +36,7 @@ body {
 .heading{
  color: chocolate;
  margin-left: 15px;
+ text-shadow: 2px 2px 4px #000000;
 }
 .imgMain{
   display: flex;
@@ -98,7 +99,7 @@ body {
   overflow: auto;
 }
 .description::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 .description::-webkit-scrollbar-track {
